# magic_futures_data_acquisition_pkg

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/magic_futures_data_acquisition_pkg/: index.doctree
docs/_build/doctrees/autoapi/magic_futures_data_acquisition_pkg/magic_futures_data_acquisition_pkg/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/magic_futures_data_acquisition_pkg/: index.html
docs/_build/jupyter_execute/: example.ipynb
magic_futures_data_acquisition_pkg/: jupyter_version_magic_futures_data_acquisition_pkg.ipynb
magic_futures_data_acquisition_pkg/.ipynb_checkpoints/: jupyter_version_magic_futures_data_acquisition_pkg-checkpoint.ipynb
src/magic_futures_data_acquisition_pkg/: futures_list.txt  magic_futures_data_acquisition_pkg.py
src/magic_futures_data_acquisition_pkg/.ipynb_checkpoints/: jupyter_version_magic_futures_data_acquisition_pkg-checkpoint.ipynb
tests/: test_magic_futures_data_acquisition_pkg.py
(+3 files in other folders)
